--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,5 +10,122 @@
   text-align: center;
   font-size: 18px;
 }
+.separator {
+  height: 20px;
+}
 
 /* Main */
+.results {
+  border-bottom: 15px solid #ffffff;
+  border-top: 15px solid #d5d6e0;
+  border-radius: 10px;
+  box-shadow: 10px 5px 5px grey;
+}
+.results__header {
+  border-bottom: 1px solid #d5d6e0;
+}
+
+.results__header__logo img {
+  width: 100px;
+}
+.results__header__main__input .input-group input {
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+.results__header__main__menu__item {
+  padding: 10px;
+  margin: auto;
+}
+.results__header__main__menu__item {
+  border-bottom: 2px #ffffff solid;
+}
+.results__header__main__menu__item:nth-child(1) {
+  border-bottom: 2px #1a0dab solid;
+  color: #1a0dab;
+}
+.results__content__metadata {
+
+}
+.results__content__metadata__url {
+  font-size: 14px;
+  line-height: 1.3;
+  margin: 5px 0;
+}
+.results__content__metadata__title {
+  font-size: 20px;
+  line-height: 1.3;
+  color: #1a0dab;
+  margin: 5px 0;
+}
+.results__content__metadata__desc {
+  margin: 5px 0;
+  color: #4d5156;
+  line-height: 1.58;
+  font-size: 14px;
+}
+.results__content__metadata__stars {
+  color: #70757a;
+  font-size: 14px ;
+}
+.results__content__metadata__stars img{
+    width: 66px;
+}
+
+.results__content__blank__url {
+  background: #5f6368;
+  width: 30%;
+  height: 15px;
+  opacity: 0.3;
+  margin-bottom: 15px;
+}
+.results__content__blank__title {
+  background: #1a0dab;
+  width: 60%;
+  height: 20px;
+  opacity: 0.3;
+  margin-bottom: 15px;
+}
+.results__content__blank__desc {
+  background: #4d5156;
+  width: 90%;
+  height: 40px;
+  opacity: 0.3;
+  margin-bottom: 8px;
+}
+
+.inputs {
+  background: #eff2f5 ;
+  padding: 20px;
+  border-top: 15px solid #ffffff;
+  height: 70%;
+}
+.inputs__input {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.inputs__input--checkbox {
+  margin: 15px;
+;
+}
+.inputs__input__title {
+  color: #3e4348;
+  font-weight: bold;
+  font-size: 16px;
+  width: 90%;
+  margin: 10px auto;
+}
+.inputs__input input{
+  width: 90%;
+  margin: auto;
+}
+.inputs__input__count {
+  position: absolute;
+  right: 5%;
+  top: 15%;
+}
+.inputs__input--checkbox p {
+  margin: 10px;
+}
+
+
