--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,33 +44,39 @@
   color: #1a0dab;
 }
 .results__content__metadata {
-
+  position: relative;
+  height: 150px;
 }
-.results__content__metadata__url {
+.results__content__url {
   font-size: 14px;
   line-height: 1.3;
   margin: 5px 0;
+  top: 15%;
 }
-.results__content__metadata__title {
+.results__content__url--metadata {
+  position: absolute;
+}
+.results__content__title {
   font-size: 20px;
   line-height: 1.3;
   color: #1a0dab;
   margin: 5px 0;
+  top: 30%;
 }
-.results__content__metadata__desc {
+.results__content__desc {
   margin: 5px 0;
   color: #4d5156;
   line-height: 1.58;
   font-size: 14px;
+  top: 50%;
 }
-.results__content__metadata__stars {
+.results__content__stars {
   color: #70757a;
   font-size: 14px ;
 }
-.results__content__metadata__stars img{
+.results__content__stars img{
     width: 66px;
 }
-
 .results__content__blank__url {
   background: #5f6368;
   width: 30%;
@@ -92,6 +98,16 @@
   opacity: 0.3;
   margin-bottom: 8px;
 }
+.results__content__url--ad:before {
+  content: 'Ad ·';
+  font-weight: bold;
+  margin-right: 5px;
+  color: #202124;
+}
+.results__content__ads {
+  margin: 20px auto;
+  display: none;
+}
 
 .inputs {
   background: #eff2f5 ;
@@ -100,9 +116,11 @@
   height: 70%;
 }
 .inputs__input {
-  display: flex;
-  flex-direction: column;
   position: relative;
+  text-align: center;
+}
+.inputs__input label {
+  text-align: left;
 }
 .inputs__input--checkbox {
   margin: 15px;
@@ -115,7 +133,7 @@
   width: 90%;
   margin: 10px auto;
 }
-.inputs__input input{
+.inputs__input input, .inputs__input textarea{
   width: 90%;
   margin: auto;
 }
@@ -126,6 +144,26 @@
 }
 .inputs__input--checkbox p {
   margin: 10px;
+}
+.results__content__map {
+  display: none;
+}
+.results__content__stars {
+  display: none;
+}
+.results__content__desc--date {
+  display: none;
+}
+.show {
+  display: inline;
+}
+.error {
+  color: red;
+}
+.progress {
+  margin: auto;
+  width: 90%;
+  height: 5px !important;
 }
 
 
