--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -45,13 +45,13 @@
 }
 .results__content__metadata {
   position: relative;
-  height: 150px;
+  height: 100px;
 }
 .results__content__url {
   font-size: 14px;
   line-height: 1.3;
   margin: 5px 0;
-  top: 15%;
+  top: 2%;
 }
 .results__content__url--metadata {
   position: absolute;
@@ -61,7 +61,7 @@
   line-height: 1.3;
   color: #1a0dab;
   margin: 5px 0;
-  top: 30%;
+  top: 20%;
 }
 .results__content__desc {
   margin: 5px 0;
@@ -117,14 +117,16 @@
 }
 .inputs__input {
   position: relative;
-  text-align: center;
+  margin-left: 20px;
+}
+.btn {
+  margin: 10px 0;
 }
 .inputs__input label {
   text-align: left;
 }
 .inputs__input--checkbox {
   margin: 15px;
-;
 }
 .inputs__input__title {
   color: #3e4348;
@@ -133,9 +135,22 @@
   width: 90%;
   margin: 10px auto;
 }
+.inputs__input input, {
+  height: 30%;
+}
 .inputs__input input, .inputs__input textarea{
   width: 90%;
   margin: auto;
+}
+.inputs__input__error {
+  background: #f6dfda;
+  color: #bd462e;
+  font-weight: bold;
+  width: 90%;
+  margin: auto;
+  font-size: 12px;
+  height: 30px;
+  z-index: 9999;
 }
 .inputs__input__count {
   position: absolute;
@@ -144,6 +159,14 @@
 }
 .inputs__input--checkbox p {
   margin: 10px;
+}
+.inputs__input--buttons .btn {
+  position: relative;
+  margin: 0 10px;
+}
+.inputs__input--buttons {
+  display: flex;
+  align-content: space-around;
 }
 .results__content__map {
   display: none;
@@ -161,9 +184,16 @@
   color: red;
 }
 .progress {
-  margin: auto;
   width: 90%;
   height: 5px !important;
+}
+.url-btn {
+  left: 85%;
+  height: 20%;
+  top: 40%;
+}
+.capitalize {
+  text-transform: capitalize;
 }
 
 
