--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -33,6 +33,7 @@
   background-color: #ffffff;
   border-radius: 24px;
   width: 100%;
+  max-width: 670px;
   height: 44px;
   display: flex;
   justify-content: flex-end;
@@ -91,6 +92,7 @@
 }
 .results__content__title--title {
   position: absolute;
+  display: inline-block;
 }
 .results__content__desc {
   margin: 5px 0;
